--- a/style.css
+++ b/style.css
@@ -1,6 +1,36 @@
-.body_background 
+body
 {
-    background-image: url("https://st2.depositphotos.com/1000487/7225/v/950/depositphotos_72257605-stock-illustration-abstract-light-blue-background-vector.jpg");
-    background-position: center;
-    background-size: cover;
+	background: #ce4a4a;
+}
+
+	.login_div1 , .login_div2
+	{
+		background: white;
+		padding: 10px;
+		float: none;
+		border-radius: 15px;
+	}
+
+
+#player1_name , #player2_name
+{
+	display: inline-block;
+	margin-left: 20px;
+}
+#word
+{
+	width: 60%;
+}
+#word_display
+{
+	letter-spacing: 5px;
+}
+#output
+{
+background: white;
+border-radius: 10px;
+border-top: 10px solid #AA4465;
+padding: 10px;
+float: none;
+text-align: left;
 }
